# SinewaveValidation

./: .gitmodules  CMakeLists.txt  ProposedMethodology.cpp  ProposedMethodology.hpp  methodsComparison.cpp
